--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@atamaco/fetcher-atama": "^5.3.1",
+    "@atamaco/nextjs": "^4.1.0",
+    "@atamaco/preview-react": "^2.1.0",
+    "@atamaco/renderer-react": "^3.1.0",
     "@contentstack/live-preview-utils": "^1.3.2",
     "@contentstack/utils": "^1.3.0",
     "@textea/json-viewer": "^3.1.1",
